# Installer

./: .editorconfig  .gitignore  .markdownlint.jsonc  Cargo.toml  Makefile  README.md  app_asar.go  cli.go  cli_other.go  cli_windows.go  constants.go  find_discord_darwin.go  find_discord_linux.go  find_discord_windows.go  github_downloader.go  go.mod  go.sum  gtk.css  gtk.go  gui.go  gui_prerequisites_windows.go  install.ps1  install.sh  log.go  main.go  openasar.go  package.json  patcher.go  pnpm-lock.yaml  self_updater.go  svelte.config.js  theme  util.go  vite.config.js  websocket.go
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  winget-pkgs.yml  winget-submission.yml
FR/: README_FR.md  cli_FR.go  find_discord_windows_FR.go  patcher_FR.go  self_updater_FR.go  util_FR.go
buildinfo/: git_data.go  ui_type.go  ui_type_cli.go  ui_type_gui.go
crates/libvencord/: Cargo.toml  README.md
crates/libvencord/src/: lib.rs
crates/libvencord/src/handler/: handler.rs  mod.rs
crates/libvencord/src/patch/: mod.rs  patch_mod.rs  patch_openasar.rs
crates/libvencord/src/paths/: branch.rs  mod.rs  shared.rs
crates/libvencord/src/paths/linux/: locations.rs
crates/libvencord/src/paths/mac/: locations.rs
crates/libvencord/src/paths/windows/: locations.rs  mod.rs
crates/libvencord/src/update/: download.rs  mod.rs  version_check.rs
crates/vencord-installer/: Cargo.toml
crates/vencord-installer-cli/: Cargo.toml
crates/vencord-installer-cli/src/: main.rs
crates/vencord-installer-cli/src/commands/: mod.rs  patch.rs
crates/vencord-installer-core/: Cargo.toml
crates/vencord-installer-core/src/: lib.rs
crates/vencord-installer-core/src/patch/: asar.rs  mod.rs  patch_mod.rs
crates/vencord-installer-core/src/paths/: _linux.rs  _mac.rs  _windows.rs  branch.rs  location.rs  mod.rs  shared.rs
crates/vencord-installer-core/src/paths/linux/: locations.rs
crates/vencord-installer-core/src/paths/mac/: locations.rs
crates/vencord-installer-core/src/paths/windows/: locations.rs
crates/vencord-installer-core/src/update/: download.rs  version_check.rs
crates/vencord-installer-gui/: Cargo.toml  build.rs
crates/vencord-installer-gui/src/: app.rs  main.rs  operations.rs
crates/vencord-installer-gui/ui/: app-window.slint  globals.slint  gruvbox-palette.slint  index.slint
crates/vencord-installer-gui/ui/pages/: base.slint  install-page.slint  pages.slint  settings-page.slint
crates/vencord-installer/src/: lib.rs  main.rs
crates/vencord-installer/src/cli/: arguments.rs  commands.rs  mod.rs  select_location.rs
macos/: Info.plist  icon.icns
nsis/: installer.nsi
package/macos/AppIcon.icon/: icon.json
package/macos/Vencord Installer.app/Contents/: Info.plist
package/macos/Vencord Installer.app/Contents/Resources/: AppIcon.icns  Assets.car
src/: app.html  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/logic/: mod.rs  shared.rs
src-tauri/src/logic/linux/: discord.rs
src-tauri/src/logic/windows/: discord.rs  mod.rs
src/routes/: +page.svelte
src/routes/balls/: +page.svelte
winres/: winres.json
