[workspace]
resolver = "3"
members = [
    "crates/vencord-installer-cli",
    "crates/vencord-installer-gui",
    "crates/vencord-installer-core",
]

[workspace.package]
edition = "2024"
version = "2.0.0"
authors = ["CLARATION <claration@riseup.net>", "V <vendicated@riseup.net>"]
repository = "https://github.com/Vencord/Installer"

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.28"
env_logger = "0.11.8"

[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true
