[package]
name = "vencord-installer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
vencord-installer-core = { path = "../vencord-installer-core" }
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
