[package]
name = "vencord-installer-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
log.workspace = true
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
regex = "1.11.1"
thiserror = "2.0.9"

[features]
default = ["openasar", "version_check"]
openasar = []
version_check = []
