[package]
name = "vencord-installer-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
log.workspace = true
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.12"
thiserror = "2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
] }

[features]
default = ["openasar", "version_check"]
openasar = []
version_check = []
