[package]
name = "vencord-installer-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
env_logger.workspace = true
vencord-installer-core = { path = "../vencord-installer-core" }
slint = { version = "1.12.1", features = [
    "i-slint-backend-qt",
    "image-default-formats",
] }
open = "5.3.3" # links
rfd = { version = "0.17.2", features = ["common-controls-v6"] } # dialogs

[build-dependencies]
slint-build = "1.12.1"
